--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.5",
     "lucide-react": "^0.468.0",
+    "motion": "^11.13.5",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
